--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -309,6 +309,21 @@
  <Reference Include="UnityEditor.WindowsStandalone.Extensions">
  <HintPath>C:/Program Files/Unity2018/Editor/Data/PlaybackEngines/windowsstandalonesupport/UnityEditor.WindowsStandalone.Extensions.dll</HintPath>
  </Reference>
+ <Reference Include="DOTween">
+ <HintPath>C:/Users/mutou/Documents/Unity3D/GF_JustOneLevel/Assets/GF_JustOneLevel/ExtensionAsset/DOTween/DOTween.dll</HintPath>
+ </Reference>
+ <Reference Include="DOTween43">
+ <HintPath>C:/Users/mutou/Documents/Unity3D/GF_JustOneLevel/Assets/GF_JustOneLevel/ExtensionAsset/DOTween/DOTween43.dll</HintPath>
+ </Reference>
+ <Reference Include="DOTween46">
+ <HintPath>C:/Users/mutou/Documents/Unity3D/GF_JustOneLevel/Assets/GF_JustOneLevel/ExtensionAsset/DOTween/DOTween46.dll</HintPath>
+ </Reference>
+ <Reference Include="DOTween50">
+ <HintPath>C:/Users/mutou/Documents/Unity3D/GF_JustOneLevel/Assets/GF_JustOneLevel/ExtensionAsset/DOTween/DOTween50.dll</HintPath>
+ </Reference>
+ <Reference Include="DOTweenEditor">
+ <HintPath>C:/Users/mutou/Documents/Unity3D/GF_JustOneLevel/Assets/GF_JustOneLevel/ExtensionAsset/DOTween/Editor/DOTweenEditor.dll</HintPath>
+ </Reference>
  <Reference Include="LitJson">
  <HintPath>C:/Users/mutou/Documents/Unity3D/GF_JustOneLevel/Assets/GF_JustOneLevel/Libraries/LitJson.dll</HintPath>
  </Reference>
