增加游戏失败UI

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -203,6 +203,7 @@
      <Compile Include="Assets\GF_JustOneLevel\Scripts\UI\UIDialog.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\UI\UIExtension.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\UI\UIFormId.cs" />
+     <Compile Include="Assets\GF_JustOneLevel\Scripts\UI\UIGameOver.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\UI\UIHeroShop.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\UI\UILoading.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\UI\UIMenu.cs" />
